--- a/glr/Cargo.toml
+++ b/glr/Cargo.toml
@@ -5,5 +5,9 @@ version = "0.1.0"
 authors = ["king1600"]
 
 [dependencies]
-kernel32-sys = "0.2"
+panic-abort = "0.3"
 libc = { version = "0.2", default-features = false }
+
+[target.'cfg(windows)'.dependencies.winapi]
+version = "0.3"
+features = ["winnt", "memoryapi", "handleapi"]
