Start on memory allocation but broken for now

--- a/glr/Cargo.toml
+++ b/glr/Cargo.toml
@@ -4,9 +4,8 @@ edition = "2018"
 version = "0.1.0"
 authors = ["king1600"]
 
-[target.'cfg(unix)'.dependencies.libc]
-version = "0.2"
-default-features = false
+[dependencies]
+libc = { version = "0.2", default-features = false }
 
 [target.'cfg(windows)'.dependencies.winapi]
 version = "0.3"
