--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = ["glr", "glrc"]
 
 [profile.dev]
+panic = "abort"
 codegen-units = 8
 incremental = true
 overflow-checks = false
@@ -11,3 +12,4 @@ lto = true
 debug = false
 panic = "abort"
 overflow-checks = false
+debug-assertions = false
